add background cinzel decor font

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,19 +1,26 @@
+body{
+  background: url(/second-project-repo/img/pictures/seven_kingdoms.jpg);
+}
 .container{
   font-family:'Cinzel Decorative',cursive;
   margin: 0 auto;
-  padding: 
-  position: relative;
-  width:1140px;
+  padding: 0 15px;
+  position:relative;
+  max-width:1140px;
 }
 .galleryTitle {
-  text-align: center;  
+  color: white;
+  text-align: center; 
 }
 .galleryElement {
   float: left;
   margin:0 3px ;
+  position: relative;
   overflow: hidden;
   width: 22%;  
 }
 .galleryElement img{
-  height: 200px;
+  color:white;
+  vertical-align: 2em;
+  height: 150px;
 }
